# storage/api-docs/api-docs.json
@@ -13,6 +13,93 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/activity": {
+            "get": {
+                "tags": [
+                    "Activities"
+                ],
+                "summary": "Get activities for a specific ticket",
+                "description": "Retrieve a list of activities related to a specific ticket by its ID.",
+                "operationId": "getTicketActivities",
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved activities for the ticket",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "res": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "ticket_id": {
+                                                        "type": "integer",
+                                                        "example": 2
+                                                    },
+                                                    "user_id": {
+                                                        "type": "integer",
+                                                        "example": 3
+                                                    },
+                                                    "action": {
+                                                        "type": "string",
+                                                        "example": "created"
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2025-03-28T14:27:59.000000Z"
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2025-03-28T14:27:59.000000Z"
+                                                    },
+                                                    "user_name": {
+                                                        "type": "string",
+                                                        "example": "Clayton Mcgee"
+                                                    },
+                                                    "title": {
+                                                        "type": "string",
+                                                        "example": "Aut dolores esse ist"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Ticket not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "ticket doesn't exist"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/register": {
             "post": {
                 "tags": [
@@ -331,49 +418,6 @@
                     },
                     "404": {
                         "description": "Ticket not found"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "Tickets"
-                ],
-                "summary": "Delete a ticket",
-                "operationId": "c37b65ae6ff3ffa8c9e0c14ea4d6a9f7",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Ticket deleted successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Ticket deleted successfully"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Ticket not found or deletion failed"
                     }
                 },
                 "security": [
@@ -715,6 +759,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Activities",
+            "description": "Activities"
+        },
         {
             "name": "Authentication",
             "description": "Authentication"
